[add] WithControls & WithIndicator Story

--- a/stories/DataDisplay/Swiper.stories.mdx
+++ b/stories/DataDisplay/Swiper.stories.mdx
@@ -235,3 +235,31 @@ export const Default = (args, { argTypes }) => ({
     </Story>
 </Canvas>
 
+## Stories
+### WithControls & WithIndicator
+<Canvas>
+    <Story name="WithControls & WithIndicator">
+        {{
+            data() {
+                return {
+                    itemLength: 5,
+                }
+            },
+            template: `
+                <div style="padding: 24px 32px;">
+                    <Swiper controlsColor="light" controlsPosition="inside" withControls indicatorColor="light" indicatorPosition="inside" withIndicator style="margin-bottom: 100px;">
+                        <template v-for="(item, index) in itemLength" :slot="'item' + index">
+                            <Typography type="display1" color="white">ITEM{{index+1}}</Typography>
+                        </template>
+                    </Swiper>
+                   <Swiper controlsColor="dark" controlsPosition="outside" withControls indicatorColor="dark" indicatorPosition="outside" withIndicator>
+                       <template v-for="(item, index) in itemLength" :slot="'item' + index">
+                           <Typography type="display1" color="white">ITEM{{index+1}}</Typography>
+                       </template>
+                   </Swiper>
+                </div>`,
+            components: { Swiper, Typography },
+        }}
+    </Story>
+</Canvas>
+
