--- a/stories/DataEntry/FileInput.stories.mdx
+++ b/stories/DataEntry/FileInput.stories.mdx
@@ -1,6 +1,8 @@
 import { ArgsTable, Meta, Story, Canvas } from "@storybook/addon-docs/blocks";
 import FileInput from "@/src/Components/DataEntry/FileInput/FileInput";
 import FileList from "@/src/Components/DataEntry/FileInput/FileList";
+import FileSummary from "@/src/Components/DataEntry/FileInput/FileSummary";
+import Divider from "@/src/Elements/Utility/Divider";
 
 <Meta
   title="Data Entry/FileInput"
@@ -69,10 +71,11 @@ export const Default = (args, { argTypes }) => ({
                  <FileInput :accept="accept" :multiple="multiple" :full="full"
                  @uploadFiles="handleUploadFiles"
                  />
+                 <Divider type="dash" vertical style="margin-top: 8.5px; margin-bottom: 12.5px;"/>
                  <FileList :files="files" @clickFileDownloadIcon="handleClickFileDownloadIcon" @clickItemContent="handleClickItemContent"/>
                  </div>
               </div>`,
-   components: { FileInput, FileList },
+   components: { FileInput, FileList, Divider },
 });
 
 # FileInput
@@ -95,6 +98,8 @@ export const Default = (args, { argTypes }) => ({
               return {
                   files: [],
                   editFiles: [],
+                  mockFile: { file: new File(["foo"], "foo.txt", { type: "text/plain",}), isLoading: false},
+                  mockFiles: [ { file: new File(["foo"], "foo.txt", { type: "text/plain",}), isLoading: false} ],
               };
           },
           methods: {
@@ -118,6 +123,15 @@ export const Default = (args, { argTypes }) => ({
             handleClickTrashIcon(payload) {
                 this.editFiles = this.editFiles.filter((item, index) => index !== payload.index);
             },
+            handleClickMockFileDownloadIcon(payload) {
+                this.mockFiles[payload.index].isLoading = true;
+                setInterval(() => {
+                    this.mockFiles[payload.index].isLoading = false;
+                }, 3000);
+             },
+             handleClickAllFileDownloadButton() {
+                alert('clickAllFileDownloadButton');
+             }
           },
             template: `<div style="width: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column;">
                         <div style="width: 100%; margin-bottom: 30px;">
@@ -125,17 +139,25 @@ export const Default = (args, { argTypes }) => ({
                             <FileInput full
                               @uploadFiles="handleUploadFiles"
                             />
+                            <Divider type="dash" vertical style="margin-top: 8.5px; margin-bottom: 12.5px;"/>
                             <FileList :files="files" @clickFileDownloadIcon="handleClickFileDownloadIcon" @clickItemContent="handleClickItemContent"/>
                         </div>
-                        <div style="width: 100%">
+                        <div style="width: 100%; margin-bottom: 30px;">
                             수정 시
                             <FileInput full
                               @uploadFiles="handleEditUploadFiles"
                             />
+                            <Divider type="dash" vertical style="margin-top: 8.5px; margin-bottom: 12.5px;"/>
                             <FileList :files="editFiles" isEdit @clickTrashIcon="handleClickTrashIcon" @clickItemContent="handleClickItemContent"/>
                         </div>
+                         <div style="width: 100%; margin-bottom: 30px;">
+                            완료 시
+                            <FileSummary :length="mockFiles.length" @clickAllFileDownloadButton="handleClickAllFileDownloadButton"/>
+                            <Divider type="dash" vertical style="margin-top: 8.5px; margin-bottom: 12.5px;"/>
+                            <FileList :files="mockFiles" @clickFileDownloadIcon="handleClickMockFileDownloadIcon" @clickItemContent="handleClickItemContent"/>
+                        </div>
                       </div>`,
-             components: { FileInput, FileList },
+             components: { FileInput, FileList, FileSummary, Divider },
         }}
     </Story>
 </Canvas>
