--- a/stories/DataEntry/Textfield.stories.mdx
+++ b/stories/DataEntry/Textfield.stories.mdx
@@ -88,7 +88,7 @@ export const Default = (args, { argTypes }) => ({
             :readonly="readonly"
             :disabled="disabled"
             :outlined="outlined"
-            :value="value"
+            :value.sync="value"
             :error="error"
         />`,
 });
