--- a/stories/DataDisplay/Swiper.stories.mdx
+++ b/stories/DataDisplay/Swiper.stories.mdx
@@ -191,12 +191,12 @@ export const Default = (args, { argTypes }) => ({
             },
             template: `
                 <div>
-                    <Swiper indicatorColor="light" style="margin-bottom: 10px;">
+                    <Swiper indicatorColor="light" withIndicator style="margin-bottom: 100px;">
                         <template v-for="(item, index) in itemLength" :slot="'item' + index">
                             <Typography type="display1" color="white">ITEM{{index+1}}</Typography>
                         </template>
                     </Swiper>
-                   <Swiper indicatorColor="dark">
+                   <Swiper indicatorColor="dark" withIndicator>
                         <template v-for="(item, index) in itemLength" :slot="'item' + index">
                             <Typography type="display1" color="white">ITEM{{index+1}}</Typography>
                         </template>
