--- a/stories/DataEntry/Dropdown.stories.mdx
+++ b/stories/DataEntry/Dropdown.stories.mdx
@@ -5,6 +5,8 @@ import ListItem from "@/src/Components/DataDisplay/ListItem";
 import Divider from "@/src/Elements/Utility/Divider";
 import SearchInput from "@/src/Components/DataEntry/SearchInput";
 import Input from "@/src/Components/DataEntry/Input";
+import Typography from "@/src/Elements/Core/Typography/Typography";
+import Label from '@/src/Components/DataDisplay/Label';
 import clickOutside from "@/directives/click-outside";
 
 <Meta
@@ -106,10 +108,14 @@ export const Default = (args, { argTypes }) => ({
                                     style="width: 230px"
                                 />
                             </template>
-                            <template v-slot:list>
-                                <List v-if="showSearchDropdown" spacing>
+                            <template v-slot:list v-if="showSearchDropdown">
+                                <Label type="dataDisplay" style="margin: 4px 0">
+                                    인기검색어
+                                </Label>
+                                <List spacing>
                                     <template v-for="(item, index) in listItems">
                                         <ListItem
+                                            size="small"
                                             :key="'list-item-' + index"
                                             @click="clickSearchInputDropdownItem(item)"
                                         >
@@ -144,7 +150,7 @@ export const Default = (args, { argTypes }) => ({
                     </Dropdown>
                 </div>
             `,
-            components: { Dropdown, SearchInput, List, ListItem, Divider, Input },
+            components: { Dropdown, SearchInput, List, ListItem, Divider, Input, Label },
             directives: {
                 clickOutside,
             },
