--- a/stories/DataDisplay/Swiper.stories.mdx
+++ b/stories/DataDisplay/Swiper.stories.mdx
@@ -34,6 +34,12 @@ import Typography from '@/src/Elements/Core/Typography/Typography';
                 options: SwiperControlsColors,
             },
         },
+        controlsCircle: {
+            description: "동그라미모양 컨트롤",
+            control: {
+                type: "boolean",
+            },
+        },
         withIndicator: {
             description: "With Indicator",
             control: {
@@ -75,7 +81,7 @@ export const Default = (args, { argTypes }) => ({
     components: { Swiper, Typography },
     template: `
         <div style="padding: 12px 32px;">
-            <Swiper :type="type" :withControls="withControls" :controlsPosition="controlsPosition" :controlsColor="controlsColor" :withIndicator="withIndicator" :indicatorPosition="indicatorPosition" :indicatorColor="indicatorColor" :spacing="spacing" :slidesPerView="slidesPerView">
+            <Swiper :type="type" :withControls="withControls" :controlsPosition="controlsPosition" :controlsColor="controlsColor" :controlsCircle="controlsCircle" :withIndicator="withIndicator" :indicatorPosition="indicatorPosition" :indicatorColor="indicatorColor" :spacing="spacing" :slidesPerView="slidesPerView">
                 <template v-for="(item, index) in 5" :slot="'item' + index">
                     <Typography type="display1" color="white">ITEM{{index+1}}</Typography>
                 </template>
@@ -107,7 +113,37 @@ export const Default = (args, { argTypes }) => ({
             },
             template: `
                     <div style="padding: 12px 24px;">
-                    <Swiper :withControls="true" controlsColor="dark" indicatorColor="light">
+                    <Swiper controlsColor="light" controlsPosition="inside" withControls style="margin-bottom: 100px;">
+                        <template v-for="(item, index) in itemLength" :slot="'item' + index">
+                            <Typography type="display1" color="white">ITEM{{index+1}}</Typography>
+                        </template>
+                    </Swiper>
+                    <Swiper controlsColor="dark" controlsPosition="inside" withControls style="margin-bottom: 100px;">
+                        <template v-for="(item, index) in itemLength" :slot="'item' + index">
+                            <Typography type="display1" color="white">ITEM{{index+1}}</Typography>
+                        </template>
+                    </Swiper>
+                    <Swiper controlsColor="light" controlsPosition="inside" withControls controlsCircle style="margin-bottom: 100px;">
+                        <template v-for="(item, index) in itemLength" :slot="'item' + index">
+                            <Typography type="display1" color="white">ITEM{{index+1}}</Typography>
+                        </template>
+                    </Swiper>
+                    <Swiper controlsColor="dark" controlsPosition="inside" withControls controlsCircle style="margin-bottom: 100px;">
+                        <template v-for="(item, index) in itemLength" :slot="'item' + index">
+                            <Typography type="display1" color="white">ITEM{{index+1}}</Typography>
+                        </template>
+                    </Swiper>
+                     <Swiper controlsColor="light" controlsPosition="outside" withControls controlsCircle style="margin-bottom: 100px;">
+                        <template v-for="(item, index) in itemLength" :slot="'item' + index">
+                            <Typography type="display1" color="white">ITEM{{index+1}}</Typography>
+                        </template>
+                    </Swiper>
+                    <Swiper controlsColor="dark" controlsPosition="top" withControls style="margin-bottom: 100px;">
+                        <template v-for="(item, index) in itemLength" :slot="'item' + index">
+                            <Typography type="display1" color="white">ITEM{{index+1}}</Typography>
+                        </template>
+                    </Swiper>
+                   <Swiper controlsColor="light" controlsPosition="top" controlsCircle withControls style="margin-bottom: 100px;">
                         <template v-for="(item, index) in itemLength" :slot="'item' + index">
                             <Typography type="display1" color="white">ITEM{{index+1}}</Typography>
                         </template>
