--- a/stories/DataDisplay/List.stories.mdx
+++ b/stories/DataDisplay/List.stories.mdx
@@ -57,7 +57,7 @@ export const Default = (args, { argTypes }) => ({
                 {{ item }}
               </Typography>
             </ListItem>
-            <Divider v-if="divider" width="100%" height="1px" :key="'divider-' + index" />
+            <Divider v-if="divider" vertical :key="'divider-' + index" />
           </template>
         </List>`,
 });
